Canvi d'estils 1 (no finals)

--- a/src/fatac/content/static/stylesheets/dashboard.css
+++ b/src/fatac/content/static/stylesheets/dashboard.css
@@ -1,6 +1,7 @@
+/* ---------------------------------------------------------------------------- Sub menu */
 #submenu {
     font-size: 90%;
-    margin-bottom: 1em;
+    float:right;
 }
 
 #submenu a.link-submenu, span.selectedTag {
@@ -30,4 +31,136 @@
 
 #submenu .separator {
     display: none;
+}
+
+
+
+
+/* ---------------------------------------------------------------------------- Butons Dashboard (Accions) */
+.actionButtons {
+    float:right; 
+    margin-right: 3px; 
+    padding-right:20px; 
+    padding-left: 5px;  
+    background:url('++resource++fatac.theme.images/ico_ampliar.png')  no-repeat right center #ececec;
+    border-radius: 0.2em;
+    border-width: 1px !important;
+    -webkit-border-radius: 0.2em;
+    -moz-border-radius: 0.2em;
+}
+.actionButtonsSimple {
+    float:right; 
+    margin-right: 3px; 
+    padding: 0px 5px; 
+    padding-left: 5px;  
+    border-radius: 0.2em;
+    border-width: 1px !important;
+    -webkit-border-radius: 0.2em;
+    -moz-border-radius: 0.2em;
+}
+
+
+/* ---------------------------------------------------------------------------- Portlets */
+dl.portletFatac { margin-bottom:0; margin-left:15px; }
+dl.portletFatac dt { 
+    margin:0 !important; 
+    min-width: 100%; 
+    width: auto; 
+    border-radius:0.3em; 
+    -webkit-radius:0.3em; 
+    -moz-border-radius:0.3em; 
+    padding:5px;
+    background-color:#D3E3C3;
+}
+dl.portletFatac dt a { 
+    font-family:Arial; font-size:11px; color:#339933 !important;
+}
+dl.portletFatac dd { 
+    right:-2px; 
+    margin:0 !important; 
+    border-radius:0 0 0.3em 0.3em; 
+    -webkit-radius:0 0 0.3em 0.3em; 
+    -moz-border-radius:0 0 0.3em 0.3em; 
+    padding:0; 
+    border-top:0; 
+}
+
+
+dl.portletRecent { margin-bottom:0; margin-left:15px; }
+dl.portletRecent dt { 
+    margin:0 !important; 
+    min-width: 100%; 
+    width: auto; 
+    border-radius:0.3em; 
+    -webkit-radius:0.3em; 
+    -moz-border-radius:0.3em; 
+    padding:5px;
+    background-color:#D3E3C3;
+    font-family:Arial; font-size:11px; color:#339933 !important;
+}
+dl.portletRecent dt a { 
+    font-family:Arial; font-size:11px; color:#339933 !important;
+}
+dl.portletRecent dd { 
+    right:-2px; 
+    margin:0 !important; 
+    border-radius:0 0 0.3em 0.3em; 
+    -webkit-radius:0 0 0.3em 0.3em; 
+    -moz-border-radius:0 0 0.3em 0.3em; 
+    padding:0; 
+    border-top:0; 
+    font-size: 80%;
+}
+
+dd.portletFooter {
+    font-size: 80%;
+}
+
+
+/* ---------------------------------------------------------------------------- Generic View */
+.genericview_my_dades { 
+    padding: 0.5em;
+    margin:1%; 
+    background-color:#D3E3C3; 
+    border-radius: 0.4em; 
+    -webkit-radius: 0.4em; 
+    -moz-border-radius: 0.4em; 
+}
+.genericview_my_dades a { 
+    font-family:Arial; 
+    font-weight:bold !important; 
+    color:#399B37 !important; 
+    font-style:italic; 
+}
+
+.activityDiscreet {
+    color: #339933;
+    font-size: 85%;
+    font-weight: normal;
+}
+
+
+/* ---------------------------------------------------------------------------- Generic View */
+table.dashboardListing {
+    font-family:Arial; 
+    font-size:13px; 
+    color:#339933 !important; 
+}
+
+table.dashboardListing th {
+    text-align: left;
+    border: 0.1em solid #e7e7e7;
+    border-style: none none solid;
+    padding: 0.5em;
+}
+
+table.dashboardListing td {
+    text-align: left;
+    padding: 0.5em;
+}
+
+table.dashboardListing a {
+    font-family:Arial; 
+    font-size:11px; 
+    color:#339933 !important;
 }
