--- a/fatac/content/static/stylesheets/dummy.css
+++ b/fatac/content/static/stylesheets/dummy.css
@@ -4,7 +4,7 @@ div.photo-column {
 }
  
 div.photo-container {
-    border: 1px solid #333333 ;
-    margin-bottom: 13px ;
+    display: inline;
+    clear: both;
 }
 
