--- a/fatac/content/static/stylesheets/dummy.css
+++ b/fatac/content/static/stylesheets/dummy.css
@@ -8,3 +8,237 @@ div.photo-container {
     clear: both;
 }
 
+
+
+
+#viewlet-below-content {
+    clear: both;
+	background-color: #d3e3c3;
+	padding: 1em;
+	border-radius: 0.3em;
+    -webkit-border-radius: 0.3em;
+    -moz-border-radius: 0.3em;
+}
+
+
+
+
+/* plone.app.discussion stylesheet */
+
+.discussion .hide {
+    display: none;
+}
+
+
+/* Comments Viewlet
+   -------------------------------------------------------------------------- */
+
+.discussion,
+#commenting {
+    /* Clear "float: left" from "manage portlets" div above the
+       comment viewlet. This will get fixed in the next Plone 4 
+       release. */
+    clear: both;
+}
+
+.comment {
+}
+
+.commentImage {
+    float: left;
+    margin-right: 0.5em;
+    height: 3.5em;
+}
+
+.commentImage a:link {
+    /* Override the default bottom border of links in Plone 4. */
+    border: 0px;
+}
+
+.commentImage img {
+
+}
+
+.commentDate {
+    display: block;
+    font-size: 85%;
+    line-height: 1.5em;
+    padding-top: 0.5em;
+    color: #76797C;
+}
+
+.commentBody {
+    clear: both;
+    overflow: auto;
+    font-family:georgia; 
+    font-size:13px; 
+    color: black !important;
+    border-radius:0em;
+    box-shadow: 0 0 0 0 #000000;
+}
+
+.commentBody p {
+    float: left;
+ }
+
+.discussion .documentByLine {
+    float: left;
+    margin-left: 0;
+	margin-bottom: 0.5em;
+	color: #339933;
+}
+.discussion .documentByLine a {
+	color: #339933;
+}
+
+.commentActions {
+    float: right;
+    text-align: right;
+}
+.commentActions input {
+    margin-right: 3px; 
+    padding: 0px 5px; 
+    padding-left: 5px;  
+    border-radius: 0.2em;
+    border-width: 1px !important;
+    -webkit-border-radius: 0.2em;
+    -moz-border-radius: 0.2em;
+    color:#339933 !important;
+    background-color:#B3D396;
+}
+
+.discussion .discreet {
+    color: #666666;
+    font-size: 85%;    
+}
+
+/* Reply Form
+   -------------------------------------------------------------------------- */
+
+.reply fieldset {
+    /* Fix bouncing fieldset when reply form is shown. */
+    margin: 0 !important;
+    color: #339933;
+}
+
+.reply .text-widget {
+    /* Make sure the input fields are always below the label. This sometimes
+     * break when the reply form is copied from the main comment form. 
+     */
+    display: block;
+}
+
+.reply-to-comment-button {
+   /* Hide the reply-to-comment button and show it only if Javascript
+    * is enabled. Since the reply functions rely on jQuery.
+    */
+    display: none; 
+    margin-right: 3px; 
+    padding: 0px 5px; 
+    padding-left: 5px;  
+    border-radius: 0.2em;
+    border-width: 1px !important;
+    -webkit-border-radius: 0.2em;
+    -moz-border-radius: 0.2em;
+    color:#339933 !important;
+    background-color:#B3D396;
+
+}
+
+.cancelreplytocomment {
+    /* Hide the cancel button in the comment form, show it only in the reply form
+     * in order to close it.
+     */
+    display: none;
+}
+
+
+/* Moderation View
+   -------------------------------------------------------------------------- */
+
+#bulkactions {
+    text-align: left;
+}
+
+#dobulkaction {
+    margin: 0.3em 0;
+}
+
+.comment-publish-button {
+    float: left;
+    margin-right: 0.5em;
+}
+
+.comment-delete-button {
+    float: left;
+}
+
+#review-comments {
+    margin: 0;
+}
+
+#fieldset-moderate-comments {
+    padding: 2em 1em;
+}
+
+/* Discussion Control Panel
+   -------------------------------------------------------------------------- */
+
+.template-discussion-settings .unclickable {
+    opacity: 0.6;
+    filter: alpha(opacity = 50);
+}
+
+/* Plone 4 Styles
+   -------------------------------------------------------------------------- */
+
+/* These styles are only applied for Plone 4, since Plone 3.x does 
+    not have a .row class for portal-column-content. */
+
+.row #dobulkaction {
+    margin: 0;
+}
+
+.row #commenting {
+    font-size: 80%;
+}
+
+.row #commenting .formControls {
+    margin: 0;
+}
+
+.row #commenting .formControls input {
+    margin-right: 3px; 
+    padding: 0px 5px; 
+    padding-left: 5px;  
+    border-radius: 0.2em;
+    border-width: 1px !important;
+    -webkit-border-radius: 0.2em;
+    -moz-border-radius: 0.2em;
+    color:#339933 !important;
+    background-color:#B3D396;
+}
+
+.row #commenting textarea,
+.row .discussion textarea {
+    font: 100% Monaco, "Courier New", Courier, monospace;
+    width: 100%;
+}
+
+.row #commenting fieldset,
+.row .discussion fieldset {
+    border: 0.1em solid #339933;
+    border-style: solid none none none;
+}
+
+.row #commenting legend,
+.row .discussion legend {
+    padding: 0.5em 0.5em 0.5em 0;
+    font-size: 85%;
+    color: #339933;
+}
+
+.row #commenting label,
+.row .discussion label {
+    font-weight:bold;
+}
