--- a/fatac/content/static/stylesheets/playlist.css
+++ b/fatac/content/static/stylesheets/playlist.css
@@ -73,3 +73,13 @@ button.btn::-moz-focus-inner,input[type=submit].btn::-moz-focus-inner{padding:0;
 .alert-message.block-message.success{background-color:#d1eed1;border-color:#bfe7bf;}
 .alert-message.block-message.info{background-color:#ddf4fb;border-color:#c6edf9;}
 .alert-message.block-message.danger p a,.alert-message.block-message.error p a,.alert-message.block-message.success p a,.alert-message.block-message.info p a{color:#404040;}
+
+
+.addPlaylistParent .addPlaylist { display:none; }
+.addPlaylistParent:hover .addPlaylist { display:block; }
+.genericview_fitxa_cerca img.addPlaylist, .genericview_fitxa_home img.addPlaylist { float:right; }
+.fitxa_ampliada_cerca img.addPlaylist { margin:15px 0; }
+.context-menu-theme-default .context-menu-item-hover { background-color:#B3D396 !important; color:white !important; }
+.context-menu-item-disabled { background-color: transparent !important; }
+.context-menu-item { font-family: arial !important; }
+.context-menu-shadow { display:none !important; }
