Updated rolemap, CSS dummy

--- a/fatac/content/static/stylesheets/dummy.css
+++ b/fatac/content/static/stylesheets/dummy.css
@@ -30,85 +30,8 @@ div.photo-container {
 
 /* Comments Viewlet
    -------------------------------------------------------------------------- */
+/* Moved to fatac.css */
 
-.discussion,
-#commenting {
-    /* Clear "float: left" from "manage portlets" div above the
-       comment viewlet. This will get fixed in the next Plone 4
-       release. */
-    clear: both;
-}
-
-.comment {
-}
-
-.commentImage {
-    float: left;
-    margin-right: 0.5em;
-    height: 3.5em;
-}
-
-.commentImage a:link {
-    /* Override the default bottom border of links in Plone 4. */
-    border: 0px;
-}
-
-.commentImage img {
-
-}
-
-.commentDate {
-    display: block;
-    font-size: 85%;
-    line-height: 1.5em;
-    padding-top: 0.5em;
-    color: #76797C;
-}
-
-.commentBody {
-    clear: both;
-    overflow: auto;
-    font-family:georgia;
-    font-size:13px;
-    color: black !important;
-    border-radius:0em;
-    box-shadow: 0 0 0 0 #000000;
-}
-
-.commentBody p {
-    float: left;
- }
-
-.discussion .documentByLine {
-    float: left;
-    margin-left: 0;
-	margin-bottom: 0.5em;
-	color: #339933;
-}
-.discussion .documentByLine a {
-	color: #339933;
-}
-
-.commentActions {
-    float: right;
-    text-align: right;
-}
-.commentActions input {
-    margin-right: 3px;
-    padding: 0px 5px;
-    padding-left: 5px;
-    border-radius: 0.2em;
-    border-width: 1px !important;
-    -webkit-border-radius: 0.2em;
-    -moz-border-radius: 0.2em;
-    color:#339933 !important;
-    background-color:#B3D396;
-}
-
-.discussion .discreet {
-    color: #666666;
-    font-size: 85%;
-}
 
 /* Reply Form
    -------------------------------------------------------------------------- */
