--- a/fatac/content/static/stylesheets/playlist.css
+++ b/fatac/content/static/stylesheets/playlist.css
@@ -86,9 +86,11 @@ button.btn::-moz-focus-inner,input[type=submit].btn::-moz-focus-inner{padding:0;
 
 .genericview_fitxa_cerca.hover { background-color: #ECECEC; }
 
-#playlist-header { border-bottom:1px dotted #888888; padding-bottom: 10px; }
+#playlist-header { border-bottom:1px dotted #888888; padding-bottom: 10px; position:relative;}
 
 #my-playlists {margin-top:10px;}
+#my-playlists #actions {position:absolute; top:5px; right:0px;}
+#my-playlists #actions a{border:none !important; font-weight:normal!important;}
 #my-playlists .playlist-links{position:absolute; top:0px; right:0px; color:#999; }
 #my-playlists .playlist-title{ display:block;margin:10px 0px;}
 #my-playlists .playlist-scrollable {margin-top:40px;}
