mostrar/amagar aportacions

--- a/fatac/content/static/stylesheets/dummy.css
+++ b/fatac/content/static/stylesheets/dummy.css
@@ -163,3 +163,10 @@ div.photo-container {
 .row .discussion label {
     font-weight:bold;
 }
+
+.portaltype-fatac-dummy #viewlet-below-content {
+    display:none;
+}
+.num_aportacions {
+    cursor:pointer;
+}
